# Distributed-cache-system

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SHOWCASE.md  http_server_log.txt  test_http.cpp
.github/workflows/: ci.yml
ai_kv_store/: CMakeLists.txt
ai_kv_store/docs/: BLUEPRINT.md
ai_kv_store/include/core/: coordinator.h  shard_manager.h
ai_kv_store/include/ml/: pinn_model.h  predictive_sharder.h  tensor.h
ai_kv_store/include/raft/: raft_log.h  raft_node.h
ai_kv_store/include/storage/: lsm_tree.h  memtable.h  sstable.h  wal.h
ai_kv_store/proto/: kv_store.proto
ai_kv_store/scripts/: chaos_test.py
ai_kv_store/src/: main.cpp
demo/: demo_showcase.ps1  heat_stroke_demo.ps1  metrics_server.ps1  request_flow_visualizer.ps1  run_all_tests.ps1  run_all_tests.sh  traffic_generator.ps1  visual_commands.ps1
include/cache/: lru_cache.h  node.h  segmented_cache.h
include/compat/: threading.h
include/ml/: pinn_model.h  predictive_sharder.h  tensor.h
include/network/: client_handler.h  http_server.h  resp_parser.h  tcp_server.h
include/persistence/: file_storage.h  storage_backend.h  write_back_worker.h
include/raft/: raft_log.h  raft_node.h
include/storage/: lsm_engine.h  memtable.h  sstable.h  wal.h
include/sync/: cache_manager.h
src/: main.cpp
src/tests/: test_concurrency.cpp  test_lru_cache.cpp  test_resp_parser.cpp
tests/: CMakeLists.txt  test_live_server.cpp
web/: dashboard.html
